syntax = "proto3";

package review;

option go_package = "github.com/kngnkg/foderee/backend/gen/review";

import "google/protobuf/empty.proto";

service ReviewService {
  rpc ListReviews(ListReviewsRequest) returns (ReviewList) {}
  rpc ListMyReviews(ListReviewsRequest) returns (ReviewList) {}
  rpc ListReviewsByUsername(ListReviewsByUsernameRequest) returns (ReviewList) {
  }
  rpc GetReviewById(GetReviewByIdRequest) returns (Review) {}
  rpc GetMyReviewById(GetReviewByIdRequest) returns (Review) {}
  rpc CreateReview(CreateReviewRequest) returns (Review) {}
  rpc UpdateReview(UpdateReviewRequest) returns (Review) {}
  rpc DeleteReview(DeleteReviewRequest) returns (google.protobuf.Empty) {}
}

message ListReviewsRequest {
  string cursor = 1;
  int32 limit = 2;
}

message ListReviewsByUsernameRequest {
  string username = 1;
  string cursor = 2;
  int32 limit = 3;
}

message GetReviewByIdRequest { string reviewId = 1; }

message CreateReviewRequest {
  string albumId = 1;
  string title = 2;
  string content = 3;
  string publishedStatus = 4;
}

message UpdateReviewRequest {
  string reviewId = 1;
  string albumId = 2;
  string title = 3;
  string content = 4;
  string publishedStatus = 5;
}

message DeleteReviewRequest { string reviewId = 1; }

message Review {
  string reviewId = 1;
  Author user = 2;
  string albumId = 3;
  string title = 4;
  string content = 5;
  string publishedStatus = 6;
  int32 likesCount = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message Author {
  string username = 1;
  string immutableId = 2;
  string displayName = 3;
  string avatarUrl = 4;
}

message ReviewList {
  repeated Review reviews = 1;
  string nextCursor = 2;
  int32 total = 3;
}
